[profile.release]
debug = true

[workspace]
members = [
  "components/airlock",
  "components/builder-api",
  "components/builder-core",
  "components/builder-db",
  "components/builder-depot",
  "components/builder-graph",
  "components/builder-http-gateway",
  "components/builder-jobsrv",
  "components/builder-originsrv",
  "components/builder-protocol",
  "components/builder-router",
  "components/builder-sessionsrv",
  "components/builder-worker",
  "components/net",
  "components/op"
]

# TODO JB: don't commit this
[patch."https://github.com/habitat-sh/habitat.git"]
bitbucket-api-client = {path = "/src/habitat/components/bitbucket-api-client"}
github-api-client = {path = "/src/habitat/components/github-api-client"}
habitat_http_client = {path = "/src/habitat/components/http-client"}
http-client-common = { path = "/src/habitat/components/http-client-common" }
